--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,8 @@
     <!doctype html>
     <title>Upload new File</title>
     <h1>Upload new File</h1>
-    <form action="/wordcloud/" method=post enctype=multipart/form-data>
+    <form action="/upload/" method=post enctype=multipart/form-data>
       <input type=file name=file>
       <input type=submit value=Upload>
     </form>
+
