--- a/app/templates/serveImg.html
+++ b/app/templates/serveImg.html
@@ -1,6 +1,8 @@
-    <!doctype html>
+<!DOCTYPE html>
+<html>
     <title>wordcloud</title>
     <h1>Save as...</h1>
     <form action="/serveImg/" method=post enctype=multipart/form-data>
     </form>
+</html>
 
